--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@angular/platform-browser-dynamic": "^4.4.3",
     "@angular/router": "^4.4.3",
     "core-js": "2.5.1",
+    "node-sass": "4.5.3",
     "rxjs": "5.4.3",
     "zone.js": "0.8.17"
   },
   "devDependencies": {
+    "@angularclass/hmr": "2.1.3",
+    "@angularclass/hmr-loader": "3.0.4",
     "@types/node": "8.0.31",
     "angular2-template-loader": "0.6.2",
     "awesome-typescript-loader": "3.2.3",
@@ -33,6 +36,7 @@
     "html-webpack-plugin": "2.30.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
+    "to-string-loader": "1.1.5",
     "tslint": "5.7.0",
     "typescript": "2.5.2",
     "webpack": "^3.6.0",
