--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.config.dev.ts",
+    "start:build": "./node_modules/.bin/http-server ./dist -p 3000",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.ts",
     "lint": "tslint -c tslint.json -p tsconfig.json --type-check",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,14 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "^4.4.3",
-    "@angular/compiler": "^4.4.3",
-    "@angular/core": "^4.4.3",
-    "@angular/forms": "^4.4.3",
-    "@angular/http": "^4.4.3",
-    "@angular/platform-browser": "^4.4.3",
-    "@angular/platform-browser-dynamic": "^4.4.3",
-    "@angular/router": "^4.4.3",
+    "@angular/common": "4.4.3",
+    "@angular/compiler": "4.4.3",
+    "@angular/core": "4.4.3",
+    "@angular/forms": "4.4.3",
+    "@angular/http": "4.4.3",
+    "@angular/platform-browser": "4.4.3",
+    "@angular/platform-browser-dynamic": "4.4.3",
+    "@angular/router": "4.4.3",
     "codelyzer": "3.2.0",
     "core-js": "2.5.1",
     "cross-env": "5.0.5",
@@ -42,6 +43,7 @@
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
+    "raw-loader": "0.5.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "stylelint": "8.1.1",
@@ -53,7 +55,7 @@
     "tslint-webpack-plugin": "1.0.0",
     "typescript": "2.5.2",
     "url-loader": "0.5.9",
-    "webpack": "^3.6.0",
+    "webpack": "3.6.0",
     "webpack-build-notifier": "0.1.16",
     "webpack-dev-server": "2.8.2",
     "webpack-visualizer-plugin": "0.1.11"
