--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "awesome-typescript-loader": "3.2.3",
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
     "raw-loader": "0.5.1",
+    "resolve-url-loader": "2.1.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "stylelint": "8.1.1",
