--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.config.dev.ts",
-    "start:build": "./node_modules/.bin/http-server ./dist -p 3000",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.ts",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.config.dev.ts",
+    "start": "http-server ./dist -p 3000",
+    "build": "npm run clean && cross-env NODE_ENV=production webpack --config webpack.config.prod.ts",
     "lint": "tslint -c tslint.json -p tsconfig.json --type-check",
+    "clean": "rimraf ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
