--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
     "@angular/router": "4.4.3",
+    "@ngrx/core": "1.2.0",
+    "@ngrx/store": "4.0.3",
     "codelyzer": "3.2.0",
     "core-js": "2.5.1",
     "cross-env": "5.0.5",
@@ -35,6 +37,7 @@
     "@angular/compiler-cli": "4.4.4",
     "@angularclass/hmr": "2.1.3",
     "@angularclass/hmr-loader": "3.0.4",
+    "@ngrx/store-devtools": "4.0.0",
     "@ngtools/webpack": "1.7.1",
     "@types/node": "8.0.19",
     "@types/webpack": "3.0.12",
@@ -47,6 +50,7 @@
     "hard-source-webpack-plugin": "0.4.9",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
+    "ngrx-store-freeze": "0.2.0",
     "raw-loader": "0.5.1",
     "resolve-url-loader": "2.1.0",
     "sass-loader": "6.0.6",
